<resources>
    <string name="about">关于</string>
    <string name="account">帐号</string>
    <string name="add_as_friend">加为好友</string>
    <string name="add_buddy">添加好友</string>
    <string name="add_friend_hint">输入YY号查找</string>
    <string name="admin_control_mic">管理员控麦</string>
    <string name="admin_mode_tip">请等待管理员发言</string>
    <string name="age">年龄</string>
    <string name="app_name">YYDemo</string>
    <string name="bind_live">绑定直播频道</string>
    <string name="bind_sns">绑定社交网络</string>
    <string name="input_remark">请输入备注</string>
    <string name="edit_remark">修改备注</string>
    <string name="edit_remark_success">修改备注成功</string>
    <string name="edit_remark_failed">修改备注失败</string>
    <string name="start_chat">开始聊天</string>
    <string name="select_report_type">请选择举报类型</string>
    <string name="sexual_or_politics">政治,色情等非法内容</string>
    <string name="vulgar">低俗擦边</string>
    <string name="failed_to_operate">抱歉，未能完成操作</string>
    <string name="buddy_iden">好友验证</string>
    <string name="cancel">取消</string>
    <string name="category">分类: %s</string>
    <string name="change_account">切换账号</string>
    <string name="channel_10_not_support_detail">10频道是YY的官方客服频道，因客服系统升级，暂不支持手机访问。请点击下面的按钮进入手机专用反馈渠道，或在电脑上使用YY客户端进入10频道。</string>
    <string name="channel_10_not_support_mobile">客服系统升级，暂不支持手机</string>
    <string name="channel_audio_already_off">频道声音已关闭</string>
    <string name="channel_text_already_off">频道文字已关闭</string>
    <string name="channel_text_state_on">频道文字已打开</string>
    <string name="channel_audio_off">关闭声音</string>
    <string name="channel_audio_on">打开声音</string>
    <string name="channel_audio_state_on">频道声音已打开</string>
    <string name="channel_change_sub">切换子频道</string>
    <string name="channel_guest_denied">此频道禁止游客进入</string>
    <string name="channel_guide_1">将麦片向上拖动可以隐藏</string>
    <string name="channel_guide_2">可以左右滑动呦</string>
    <string name="channel_id_x" formatted="false">ID : %s</string>
    <string name="channel_network_error">网络不太给力，努力连接中...</string>
    <string name="channel_online_members">在线Y友</string>
    <string name="channel_pause">暂停收听</string>
    <string name="channel_pause_legacy">省流量/挂机</string>
    <string name="channel_playing">正在收听&#8230;</string>
    <string name="channel_resume">恢复收听</string>
    <string name="channel_subs">子频道</string>
    <string name="channel_text_deny_all">管理员禁止所有人打字</string>
    <string name="channel_text_deny_guest">管理员禁止游客打字</string>
    <string name="channel_text_deny_me">你已经被管理员禁止了文字聊天！</string>
    <string name="channel_text_length_exceeded" formatted="false">管理员设置了游客在本频道每次最大可发送%d个字符，请修改后再发。</string>
    <string name="channel_text_too_fast" formatted="false">对不起，频道目前限制文字聊天的速度！请%d秒后再发言。</string>
    <string name="channel_text_waiting" formatted="false">管理员规定游客必须进入频道%d分钟后，才能发言！请%d分钟%d秒后再发言。</string>
    <string name="channel_tip">		您正在使用GPRS联网，“多人语音”大约2M/小时流量、“听歌”大约最多14M/小时。\n建议在WIFI下使用频道语音功能。</string>
    <string name="channel_txt_close">聊天文字已关闭</string>
    <string name="channel_txt_off">关闭文字</string>
    <string name="channel_txt_on">打开文字</string>
    <string name="channel_txt_turned_on">聊天文字已打开</string>
    <string name="channel_user_exp">贡献值&#160;:&#160;%s</string>
    <string name="channel_user_online">人在线</string>
    <string name="check_update">检查更新</string>
    <string name="clean_db">清除数据库</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="click_to_login">点此登录</string>
    <string name="login">登录</string>
    <string name="connect_again">重连</string>
    <string name="delete_friend">删除好友</string>
    <string name="empty_mic_queue">没有人在排麦</string>
    <string name="report_this_person">举报此人</string>
    <string name="report_success_tip">举报成功</string>
    <string name="err">错误</string>
    <string name="err_channel_id">网络不太给力，努力连接中...</string>
    <string name="err_empty_nickname">昵称不能为空</string>
    <string name="err_empty_password">密码不能为空</string>
    <string name="err_empty_text">输入不能为空</string>
    <string name="err_empty_username">用户名不能为空</string>
    <string name="err_freeze_kick">您所在频道因涉及违规内容已被官方冻结，您的账号同时被暂时冻结。您可以进入官方客服频道10咨询详情。</string>
    <string name="err_invalid_req">非法的请求</string>
    <string name="err_no_server">服务器连接失败，请稍后重试</string>
    <string name="err_no_yy">请输入要查找的YY号</string>
    <string name="err_nonexist_user">用户名不存在</string>
    <string name="err_nonexist_yy">查询不到Y友信息</string>
    <string name="err_registe">注册失败</string>
    <string name="err_retry_verify">密码错误次数过多，建议您使用手机号进行密码找回。继续频繁尝试可能造成帐号被暂时冻结。</string>
    <string name="err_search_self">这是您自己的YY号</string>
    <string name="err_session_congest">同时进频道人数过多，请稍候重试</string>
    <string name="err_session_frozen">频道已冻结</string>
    <string name="err_session_full">频道人数已达到上限，请稍后再试</string>
    <string name="err_session_invalid_req">未知的请求</string>
    <string name="err_session_not_exist">频道不存在</string>
    <string name="err_session_removed">频道已删除</string>
    <string name="err_title">错误</string>
    <string name="err_too_often_search">请求过于频繁，请稍后再试。</string>
    <string name="err_unknown_login_error">连接服务器失败</string>
    <string name="err_user_ban">您因涉嫌违规操作，账号已被官方暂时冻结，请过一段时间后再尝试登录，或进入官方客服频道10咨询详情。</string>
    <string name="err_user_kick">您的账号在别处登录, 您被迫离线。</string>
    <string name="err_wrong_password">密码错误</string>
    <string name="exit">退出</string>
    <string name="exit_app">退出YY</string>
    <string name="exit_account">退出更换帐号</string>
    <string name="exit_confirmation">你确定要退出手机YY吗？</string>
    <string name="exit_note">退出将无法接收到好友消息</string>
    <string name="experience">积分</string>
    <string name="export_db">导出数据库</string>
    <string name="fans">粉丝</string>
    <string name="fans_num_x" formatted="false">粉丝 %d</string>
    <string name="feedback">意见反馈</string>
    <string name="flower_growing" formatted="false">鲜花积累中，还有%d秒可获取一朵鲜花</string>
    <string name="flowers_num_x" formatted="false">鲜花 %d</string>
    <string name="fans_x" formatted="false">粉丝 %d</string>
    <string name="fmt_usr_cnt" formatted="false">%d人</string>
    <string name="fore_notice_live">直播预告</string>
    <string name="free_mode_tip">当前频道可以自由发言</string>
    <string name="frequent_channel">最常访问</string>
    <string name="gallery">图库</string>
    <string name="guest_voice_denied">当前禁止游客语音</string>
    <string name="hot_live">正在热播</string>
    <string name="ids_str_about">关于</string>
    <string name="ids_str_about_copyright">Copyright(C) 2007-2013 Duowan.com\nAll Rights Reserved</string>
    <string name="ids_str_button_cancel">取 消</string>
    <string name="ids_str_button_ok">确 定</string>
    <string name="ids_str_feedback_input_title">请详细描述您遇到的问题</string>
    <string name="ids_str_input_id_enter_channel">输入数字ID进频道</string>
    <string name="ids_str_quit_channel">退出频道</string>
    <string name="ids_str_report">举报</string>
    <string name="ids_str_online_y_friends">现场Y友</string>
    <string name="input_limit">输入字数限制：{0} - {1} 字</string>
    <string name="input_signature">请输入个性签名</string>
    <string name="join_subsession_fail">跳转子频道失败</string>
    <string name="joining_channel">正在进入频道&#8230;</string>
    <string name="joining_subsession">跳转子频道&#8230;</string>
    <string name="kindly_tip">温馨提示</string>
    <string name="latest_broadcast">最新直播</string>
    <string name="level">等级</string>
    <string name="live">直播</string>
    <string name="doings">消息</string>
    <string name="my">我</string>
    <string name="recoding_video">转码中..</string>
    <string name="cannot_play_video_for_recoding">作品转码中，稍后可以播放</string>
    <string name="live_total">共 %d 个直播</string>
    <string name="load_speaker">等待麦上宝贝&#8230;</string>
    <string name="loading_data">数据获取中&#8230;</string>
    <string name="login_freez">您短时间内重试密码次数过多，为保障安全，您的账号已被暂时冻结，请1小时后再试</string>
    <string name="logout">切换帐号</string>
    <string name="main_page">首页</string>
    <string name="market">手游市场</string>
    <string name="mask_this_person">屏蔽此人</string>
    <string name="micqueue_disabled">禁止排麦</string>
    <string name="micqueue_disabled_by_manager">管理员禁止排麦</string>
    <string name="micqueue_disabled_for_visitor">游客禁止排麦</string>
    <string name="micqueue_mode_tip">麦空出来喽，上来说几句吧</string>
    <string name="micqueue_time_left" formatted="false">%ds</string>
    <string name="my_channel">我的频道</string>
    <string name="my_favorite">我的收藏</string>
    <string name="his_favorite">TA的收藏</string>
    <string name="network_error">本地无可用网络，请检测网络设置</string>
    <string name="nick_name">昵称</string>
    <string name="nickname">昵称</string>
    <string name="notice">消息提醒</string>
    <string name="number_of_singers_in_queue">共有%d人排麦</string>
    <string name="online_postfix">在现场</string>
    <string name="pc_login_yy">电脑端登录YY</string>
    <string name="personal_cares">关注</string>
    <string name="personal_details">资料</string>
    <string name="personal_works">作品</string>
    <string name="personal_my_channels">我的频道</string>
    <string name="personal_his_channels">TA的频道</string>
    <string name="personal_care">关注</string>
    <string name="month_format">%d月</string>
    <string name="day_format">%d</string>
    <string name="personal_x_cares" formatted="false">关注 %d</string>
    <string name="personal_x_exp" formatted="false">积分 %d</string>
    <string name="personal_x_level" formatted="false">等级 %d</string>
    <string name="personal_x_passport" formatted="false">帐户 %s</string>
    <string name="personal_x_works" formatted="false">作品 %d</string>
    <string name="photo_edit">调整图片</string>
    <string name="policy">使用条款和隐私政策</string>
    <string name="profile_view">个人中心</string>
    <string name="program_start_date">MM月dd日</string>
    <string name="program_start_time">kk:mm</string>
    <string name="queue_for_mic">我要排麦</string>
    <string name="quit_channel">退出频道</string>
    <string name="readonly_before_login">登录后可以发言</string>
    <string name="release_mic">我要下麦</string>
    <string name="relogin">重新登录</string>
    <string name="reserve">预定: </string>
    <string name="result_filtered">您输入的关键字已被屏蔽，搜索结果未予显示！</string>
    <string name="resume_play">恢复收听</string>
    <string name="run_test">测试</string>
    <string name="search_channel">查找频道</string>
    <string name="search_channel_live">输入频道名称或ID</string>
    <string name="search_sub_channel_id">输入子频道ID</string>
    <string name="my_channel_title">查找频道或直播间</string>
    <string name="search_failed">未找到符合条件的频道\n请重新输入搜索内容</string>
    <string name="search_summary" formatted="false">找到相关结果%d个</string>
    <string name="send">发送</string>
    <string name="send_flower" formatted="false">送给麦上宝贝%d朵鲜花！</string>
    <string name="set_network">网络设置</string>
    <string name="set_password">设置密码</string>
    <string name="setting_feedback_sending_fail">抱歉，发送失败</string>
    <string name="setting_feedback_sending_succ">您的反馈已成功发送</string>
    <string name="site">所在地</string>
    <string name="social_boardcast">社区广播</string>
    <string name="statistics">协议统计</string>
    <string name="str_add_budy_succ">已成功发送添加好友请求\n如果对方处理了您的请求，我们会发系统消息通知您</string>
    <string name="str_add_friend">加为好友</string>
    <string name="str_agree">同意</string>
    <string name="str_assistant">好友助手</string>
    <string name="str_auto_register">一键注册</string>
    <string name="str_back">返回</string>
    <string name="str_buddy_added">已经成为你的好友</string>
    <string name="str_buddy_reject">拒绝加你为好友</string>
    <string name="str_button_cancel">取 消</string>
    <string name="str_dummy_test"></string>
    <string name="str_leave_channel">退出频道</string>
    <string name="str_join_queue">加入队列</string>
    <string name="str_leave_queue">退出队列</string>
    <string name="str_query_queue">查询队列</string>
    <string name="str_send_TextChat">发送公屏</string>
    <string name="str_query_User_Info">查用户信息</string>
    <string name="str_update_User_Info">更新用户信息</string>
    <string name="str_pull_User_List">拉用户列表</string>
    <string name="str_fetch_Ch_Info">拉频道信息</string>
    <string name="str_update_Ch_Info">更新频道信息</string>
</resources>